--- a/dis.html
+++ b/dis.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,27 +10,39 @@
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/product.css">
 </head>
+
 <body>
     <nav class="navbar"></nav>
 
     <section class="product-details">
-        <div class="image-slider" style="background-image: url(image/drums/drum.jpg);">
+        <div class="image-slider" style="background-image: url(image/piano/dk25.jpg);">
             <div class="product-images">
-                <img src="image/drums/drum.jpg" class="active" alt="">
-                <img src="image/drums/drum2.jpg" alt="">
-                <img src="image/drums/drum3.jpg" alt="">
-                <img src="image/drums/drum7.jpg" alt="">
+                <img src="image/piano/dk25.jpg" class="active" alt="">
+                <img src="image/piano/sub-dk25.jpg" alt="">
+                <img src="image/piano/sub1-dk25.jpg" alt="">
+                <img src="image/piano/sub2-dk25.jpg" alt="">
             </div>
         </div>
 
         <div class="details">
-            <h2 class="product-brand">Havana HV 522 5Pcs Acoustic Drum Set</h2>
-            <p class="product-short-des">Set the stage on fire with this Acoustic Drum set from the house of Havana. It is an excellent drum kit delivering great specifications. Made from premium quality material, this set of 5 pieces is sturdy will last for a long time.
-            More Information</p>
-            <span class="product-price">&#8377 32,544.00</span>
-            <span class="product-actual-price">&#8377 36,160.00
+            <h2 class="product-brand">Yamaha DGX-670 88-Keys Digital Piano</h2>
+
+            <p class="product-short-des">With the Yamaha DGX-670 88-Keys Digital Piano, you can bring beautiful music
+                into your home with ease! It's perfect for anyone who wants to progress their piano skills and explore a
+                range of musical genres. This digital piano allows you to enjoy straight-ahead piano playing without any
+                hassle, so you can create beautiful pieces of music or accompany yourself to sing your own songs.
+                
+                <br>
+                <br>
+
+                The accompanying Automatic Accompaniment Styles offer to back in an array of melodies, such as pop, R&B,
+                and jazz. You can forget to memorize notes –
+                just concentrate on showcasing your singing ability while enjoying the music created by this
+                feature-packed instrument.</p>
+            <span class="product-price">&#8377 78,291.00</span>
+            <span class="product-actual-price">&#8377 86,990.00
             </span>
-            
+
 
             <div class="buttons">
                 <button class="btn cart-btn">Add to cart</button>
@@ -235,4 +248,5 @@
     <script src="js/product.js"></script>
 
 </body>
+
 </html>
