--- a/dis1.html
+++ b/dis1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,28 +10,29 @@
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/product.css">
 </head>
+
 <body>
     <nav class="navbar"></nav>
 
     <section class="product-details">
-        <div class="image-slider" style="background-image: url(image/drums/drum.jpg);">
+        <div class="image-slider" style="background-image: url(image/piano/dk24.jpg);">
             <div class="product-images">
-                <img src="image/drums/drum.jpg" class="active" alt="">
-                <img src="image/drums/drum2.jpg" alt="">
-                <img src="image/drums/drum3.jpg" alt="">
-                <img src="image/drums/drum7.jpg" alt="">
+                <img src="image/piano/dk24.jpg" class="active" alt="">
+                <img src="image/piano/sub-dk24.jpg" alt="">
             </div>
         </div>
 
         <div class="details">
-            <h2 class="product-brand">Havana HV 522 5Pcs Acoustic Drum Set</h2>
-            <p class="product-short-des">Set the stage on fire with this Acoustic Drum set from the house of Havana. It is an excellent drum kit delivering great specifications. Made from premium quality material, this set of 5 pieces is sturdy will last for a long time.
-            More Information</p>
-            <span class="product-price">&#8377 32,544.00</span>
-            <span class="product-actual-price">&#8377 36,160.00
-            </span>
-            
+            <h2 class="product-brand">Yamaha CLP-745R Digital Piano</h2>
 
+            <br>
+            <br>
+
+            <span class="product-price">&#8377 189,990.00</span>
+
+            <br>
+            <br>
+            
             <div class="buttons">
                 <button class="btn cart-btn">Add to cart</button>
                 <button class="btn">Add to wishlist</button>
@@ -235,4 +237,5 @@
     <script src="js/product.js"></script>
 
 </body>
+
 </html>
