--- a/dis3.html
+++ b/dis3.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,27 +10,43 @@
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/product.css">
 </head>
+
 <body>
     <nav class="navbar"></nav>
 
     <section class="product-details">
-        <div class="image-slider" style="background-image: url(image/drums/drum.jpg);">
+        <div class="image-slider" style="background-image: url(image/piano/dk22.jpg);">
             <div class="product-images">
-                <img src="image/drums/drum.jpg" class="active" alt="">
-                <img src="image/drums/drum2.jpg" alt="">
-                <img src="image/drums/drum3.jpg" alt="">
-                <img src="image/drums/drum7.jpg" alt="">
+                <img src="image/piano/dk22.jpg" class="active" alt="">
+                <img src="image/piano/sub-dk22.jpg" alt="">
+                <img src="image/piano/sub1-dk22.jpg" alt="">
+                <img src="image/piano/sub3-dk22.jpg" alt="">
             </div>
         </div>
 
         <div class="details">
-            <h2 class="product-brand">Havana HV 522 5Pcs Acoustic Drum Set</h2>
-            <p class="product-short-des">Set the stage on fire with this Acoustic Drum set from the house of Havana. It is an excellent drum kit delivering great specifications. Made from premium quality material, this set of 5 pieces is sturdy will last for a long time.
-            More Information</p>
-            <span class="product-price">&#8377 32,544.00</span>
-            <span class="product-actual-price">&#8377 36,160.00
-            </span>
-            
+            <h2 class="product-brand">Casio AP-470BK 88-Keys Digital Piano</h2>
+            <br>
+
+            <p class="product-short-des">Do you want to unleash your hidden musical talent? The Casio AP-470BK 88-Keys
+                Digital Piano is the perfect tool for cultivating your music skills. This piano offers accuracy,
+                attention to detail and outstanding sound quality—meeting the highest standards of professional
+                musicians!
+
+                <br>
+                <br>
+
+                The newly developed Multi-dimensional Morphing AiR*Sound Source provides exceptional, smooth tones that
+                accurately reflect a real concert piano’s notes. Its range of reverberation options allows an even more
+                detailed expression. Plus, its expanded memory capacity enables a longer sampling duration and enhanced
+                waveform data quality.
+            </p>
+
+            <span class="product-price">&#8377 80,996.00</span>
+            <span class="actual-price">&#8377 89,995.00</span>
+
+            <br>
+            <br>
 
             <div class="buttons">
                 <button class="btn cart-btn">Add to cart</button>
@@ -235,4 +252,5 @@
     <script src="js/product.js"></script>
 
 </body>
+
 </html>
