--- a/dis4.html
+++ b/dis4.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,27 +10,37 @@
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/product.css">
 </head>
+
 <body>
     <nav class="navbar"></nav>
 
     <section class="product-details">
-        <div class="image-slider" style="background-image: url(image/drums/drum.jpg);">
+        <div class="image-slider" style="background-image: url(image/piano/dk21.jpg);">
             <div class="product-images">
-                <img src="image/drums/drum.jpg" class="active" alt="">
-                <img src="image/drums/drum2.jpg" alt="">
-                <img src="image/drums/drum3.jpg" alt="">
-                <img src="image/drums/drum7.jpg" alt="">
+                <img src="image/piano/dk21.jpg" class="active" alt="">
+                <img src="image/piano/sub-dk21.jpg" alt="">
+                <img src="image/piano/sub1-dk21.jpg" alt="">
+                <img src="image/piano/sub2-dk21.jpg" alt="">
             </div>
         </div>
 
         <div class="details">
-            <h2 class="product-brand">Havana HV 522 5Pcs Acoustic Drum Set</h2>
-            <p class="product-short-des">Set the stage on fire with this Acoustic Drum set from the house of Havana. It is an excellent drum kit delivering great specifications. Made from premium quality material, this set of 5 pieces is sturdy will last for a long time.
-            More Information</p>
-            <span class="product-price">&#8377 32,544.00</span>
-            <span class="product-actual-price">&#8377 36,160.00
-            </span>
-            
+            <h2 class="product-brand">Casio AP-270BK 88-Keys Digital Piano</h2>
+            <br>
+
+            <p class="product-short-des">Introducing the Casio AP-270BK 88-Keys Digital Piano! Experience grand piano
+                performance with uncompromising craftsmanship that makes its sound as beautiful as the instrument
+                itself. It is equipped with Casio’s newly developed Multi-dimensional Morphing AiR*Sound Source,
+                designed to capture and express the rich, resonating tones inherent in a grand piano - making it an
+                ideal choice for amateur and professional musicians alike.
+
+            </p>
+
+            <span class="product-price">&#8377 67,496.00</span>
+            <span class="actual-price">&#8377 74,995.00</span>
+
+            <br>
+            <br>
 
             <div class="buttons">
                 <button class="btn cart-btn">Add to cart</button>
@@ -235,4 +246,5 @@
     <script src="js/product.js"></script>
 
 </body>
+
 </html>
