--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 </head>
 
 <body>
-    <nav class="navbar"></nav>
+    <nav class="navbar">
+    </nav>
 
     <!-- hero section -->
 
     <header class="hero-section">
+
     </header>
 
     <!-- <div class="hero-slider" data-carousel>
@@ -158,32 +160,32 @@
     <!-- collections -->
 
     <section class="collection-container">
-        <a href="#" class="collection">
+        <a href="keyboard.html" class="collection">
             <img src="image/keys.avif" alt="">
             <p class="collection-title">Keys</p>
         </a>
 
-        <a href="#" class="collection">
+        <a href="drum.html" class="collection">
             <img src="image/drums.avif" alt="">
             <p class="collection-title">drums</p>
         </a>
 
-        <a href="#" class="collection">
+        <a href="guitar1.html" class="collection">
             <img src="image/elecguitar.avif" alt="">
             <p class="collection-title">electric <br> guitars</p>
         </a>
 
-        <a href="#" class="collection">
+        <a href="guitar.html" class="collection">
             <img src="image/asguitar.avif" alt="">
             <p class="collection-title">acoustic <br> guitars</p>
         </a>
 
-        <a href="#" class="collection">
+        <a href="guitar3.html" class="collection">
             <img src="image/guitaramp.avif" alt="">
             <p class="collection-title">guitar amplifiers & <br> processors</p>
         </a>
 
-        <a href="#" class="collection">
+        <a href="guitar4.html" class="collection">
             <img src="image/ukulele.png" alt="">
         </a>
     </section>
@@ -199,12 +201,11 @@
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">havana</h2>
-                    <p class="product-short-des">Havana AAG39 Acoustic Guitar with bag - Red</p>
-                    <span class="price">&#8377 5,072</span><span class="actual-price">&#8377 5,444</span>
+                    <h2 class="product-brand">revolt</h2>
+                    <p class="product-short-des">Revolt 39c Acoustic Guitar - Blue</p>
+                    <span class="price">&#8377 5,450</span>
                 </div>
             </div>
-
             <div class="product-card">
                 <div class="product-image">
                     <img src="image/guitars/guitar1.jpg" class="product-thumb" alt="">
@@ -212,11 +213,10 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">revolt</h2>
-                    <p class="product-short-des">Revolt 39c Acoustic Guitar - Black</p>
+                    <p class="product-short-des">Revolt 39c Acoustic Guitar - Blue</p>
                     <span class="price">&#8377 5,450</span>
                 </div>
             </div>
-
             <div class="product-card">
                 <div class="product-image">
                     <img src="image/guitars/guitar2.jpg" class="product-thumb" alt="">
@@ -378,7 +378,7 @@
     <script src="js/nav.js"></script>
     <script src="js/home.js"></script>
     <script src="js/footer.js"></script>
-    <!-- <script src="js/carousel.js"></script> --> -->
+    <!-- <script src="js/carousel.js"></script> -->
     <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/flickity/2.2.1/flickity.pkgd.min.js"></script> -->
 </body>
 
