--- a/keyboard.html
+++ b/keyboard.html
@@ -15,55 +15,6 @@
     <section class="search-results">
         <h2 class="heading"><span>Portable Keyboards</span></h2>
         <div class="product-container">
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="image/piano/pk1.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">mahalo</h2>
-                    <p class="product-short-des">Mahalo MA1WL Owl Art Series Soprano...</p>
-                    <span class="price">&#8377 2,341</span><span class="actual-price">&#8377 2,464</span>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="image/piano/pk2.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">mahalo</h2>
-                    <p class="product-short-des">Mahalo MA1TK Soprano Tiki Ukulele</p>
-                    <span class="price">&#8377 2,341</span><span class="actual-price">&#8377 2,464</span>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="image/piano/pk3.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">mahalo</h2>
-                    <p class="product-short-des">Mahalo Ukuleles ML2CP Island Concert Ukulele with Gigbag-Coral Pink
-                        ml-2-cp</p>
-                    <span class="price">&#8377 2,600</span><span class="actual-price">&#8377 2,736</span>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="image/piano/pk4.jpeg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">mahalo</h2>
-                    <p class="product-short-des">Mahalo Ukuleles ML2BC Island Concert Ukulele with Gigbag-Berry Crush
-                        ml-2-bc</p>
-                    <span class="price">&#8377 2,600</span><span class="actual-price">&#8377 2,736</span>
-                </div>
-            </div>
 
             <div class="product-card">
                 <div class="product-image">
@@ -71,9 +22,9 @@
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">pluto</h2>
-                    <p class="product-short-des">Pluto HW34-101 34 Inch Baby Acoustic Guitar</p>
-                    <span class="price">&#8377 4,596</span><span class="actual-price">&#8377 4,848</span>
+                    <h2 class="product-brand">Yamaha</h2>
+                    <p class="product-short-des">Yamaha PSS-E30 (Remie) Mini-key Keyboard</p>
+                    <span class="price">&#8377 4,190</span>
                 </div>
             </div>
 
@@ -83,9 +34,9 @@
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">Pearl</h2>
-                    <p class="product-short-des">Pearl Roadshow 5 Pcs Acoustic Drum Set</p>
-                    <span class="price">&#8377 54,079</span><span class="actual-price">&#8377 56,925</span>
+                    <h2 class="product-brand">Yamaha</h2>
+                    <p class="product-short-des">Yamaha Portable Keyboard PSS-F30</p>
+                    <span class="price">&#8377 4,190</span>
                 </div>
             </div>
 
@@ -95,9 +46,9 @@
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">Pearl</h2>
-                    <p class="product-short-des">Pearl Roadshow 5 Pcs Acoustic Drum Set</p>
-                    <span class="price">&#8377 54,079</span><span class="actual-price">&#8377 56,925</span>
+                    <h2 class="product-brand">Korg</h2>
+                    <p class="product-short-des">Korg Monotron DELAY Analog Ribbon Synthesizer</p>
+                    <span class="price">&#8377 4,489</span><span class="actual-price">&#8377 4,725</span>
                 </div>
             </div>
 
@@ -159,7 +110,57 @@
                     <p class="product-short-des">Mapex Mars MA529SFIW Rock Shell Pack Driftwood</p>
                     <span class="price">&#8377 63,603</span><span class="actual-price">&#8377 66,950</span>
                 </div>
-            </div>            
+            </div>
+
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="image/piano/pk13.jpg" class="product-thumb" alt="">
+                    <button class="card-btn">add to whislist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">Casio</h2>
+                    <p class="product-short-des">Casio CTK-2550 Portable Keyboard</p>
+                    <span class="price">&#8377 8,276.00</span><span class="actual-price">&#8377 9,195.00</span>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="image/piano/pk14.jpg" class="product-thumb" alt="">
+                    <button class="card-btn">add to whislist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">Casio</h2>
+                    <p class="product-short-des">Casio CTK-3500 Portable Keyboard</p>
+                    <span class="price">&#8377 9,995.00</span><span class="actual-price">&#8377 10,995.00</span>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="image/piano/pk15.jpg" class="product-thumb" alt="">
+                    <button class="card-btn">add to whislist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">Casio</h2>
+                    <p class="product-short-des">Casio CTX-700 Portable Keyboard</p>
+                    <span class="price">&#8377 11,495.00</span><span class="actual-price">&#8377 12,995.00</span>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="image/piano/pk16.jpg" class="product-thumb" alt="">
+                    <button class="card-btn">add to whislist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">Casio</h2>
+                    <p class="product-short-des">Casio CTX-9000IN Portable Keyboard</p>
+                    <span class="price">&#8377 25,740.00</span><span class="actual-price">&#8377 28,090.00</span>
+                </div>
+            </div>
+
+                        
     </section>
 
     <footer></footer>
