--- a/keyboard1.html
+++ b/keyboard1.html
@@ -17,7 +17,7 @@
         <div class="product-container">
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/piano/dk1.jpg" class="product-thumb" alt="">
+                    <img src="image/piano/dk13.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -29,7 +29,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/piano/dk2.jpg" class="product-thumb" alt="">
+                    <img src="image/piano/dk14.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -41,7 +41,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/piano/dk3.jpg" class="product-thumb" alt="">
+                    <img src="image/piano/dk15.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -54,7 +54,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/piano/dk4.jpg" class="product-thumb" alt="">
+                    <img src="image/piano/dk16.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -67,7 +67,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/piano/dk5.jpg" class="product-thumb" alt="">
+                    <img src="image/piano/dk17.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -79,7 +79,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/piano/dk6.jpg" class="product-thumb" alt="">
+                    <img src="image/piano/dk18.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -91,7 +91,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/piano/dk7.jpg" class="product-thumb" alt="">
+                    <img src="image/piano/dk19.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -103,61 +103,61 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/piano/dk8.jpg" class="product-thumb" alt="">
+                    <a href="dis4.html"><img src="image/piano/dk21.jpg" class="product-thumb" alt=""></a>
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">Pearl</h2>
-                    <p class="product-short-des">Pearl Roadshow 5 Pcs Acoustic Drum Set</p>
-                    <span class="price">&#8377 54,079</span><span class="actual-price">&#8377 56,925</span>
+                    <h2 class="product-brand">Casio</h2>
+                    <p class="product-short-des">Casio AP-270BK 88-Keys Digital Piano</p>
+                    <span class="price">&#8377 67,496.00</span><span class="actual-price">&#8377 74,995.00</span>
                 </div>
             </div>
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/piano/dk9.jpg" class="product-thumb" alt="">
+                    <a href="dis3.html"><img src="image/piano/dk22.jpg" class="product-thumb" alt=""></a>
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">Pearl</h2>
-                    <p class="product-short-des">Pearl Roadshow 5 Pcs Acoustic Drum Set</p>
-                    <span class="price">&#8377 54,079</span><span class="actual-price">&#8377 56,925</span>
+                    <h2 class="product-brand">Casio</h2>
+                    <p class="product-short-des">Casio AP-470BK 88-Keys Digital Piano</p>
+                    <span class="price">&#8377 80,996.00</span><span class="actual-price">&#8377 89,995.00</span>
                 </div>
             </div>
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/piano/dk10.jpg" class="product-thumb" alt="">
+                    <a href="dis2.html"><img src="image/piano/dk23.jpg" class="product-thumb" alt=""></a>
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">Pearl</h2>
-                    <p class="product-short-des">Pearl Roadshow 5 Pcs Acoustic Drum Set</p>
-                    <span class="price">&#8377 54,079</span><span class="actual-price">&#8377 56,925</span>
+                    <h2 class="product-brand">Yamaha</h2>
+                    <p class="product-short-des">Yamaha CLP-735R Digital Piano</p>
+                    <span class="price">&#8377 156,990.00</span>
                 </div>
             </div>
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/piano/dk11.jpg" class="product-thumb" alt="">
+                    <a href="dis1.html"><img src="image/piano/dk24.jpg" class="product-thumb" alt=""></a>
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">Pearl</h2>
-                    <p class="product-short-des">Pearl Roadshow 5 Pcs Acoustic Drum Set</p>
-                    <span class="price">&#8377 54,079</span><span class="actual-price">&#8377 56,925</span>
+                    <h2 class="product-brand">Yamaha</h2>
+                    <p class="product-short-des">Yamaha CLP-745R Digital Piano</p>
+                    <span class="price">&#8377 189,990.00</span>
                 </div>
             </div>
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/piano/dk12.jpg" class="product-thumb" alt="">
+                    <a href="dis.html"><img src="image/piano/dk25.jpg" class="product-thumb" alt=""></a>
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">Mapex</h2>
-                    <p class="product-short-des">Mapex Mars MA529SFIW Rock Shell Pack Driftwood</p>
-                    <span class="price">&#8377 63,603</span><span class="actual-price">&#8377 66,950</span>
+                    <h2 class="product-brand">Yamaha</h2>
+                    <p class="product-short-des">Yamaha DGX-670 88-Keys Digital Piano</p>
+                    <span class="price">&#8377 78,291.00</span><span class="actual-price">&#8377 86,990.00</span>
                 </div>
             </div>            
     </section>
