--- a/search.html
+++ b/search.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,264 +11,80 @@
     <link rel="stylesheet" href="css/search.css">
 
 </head>
+
 <body>
-    
+
     <nav class="navbar"></nav>
 
-    <section class="search-results">
-        <h2 class="heading"><span>Products</span></h2>
-        <div class="product-container">
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">5% off</span>
-                    <img src="image/guitars/uk.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">mahalo</h2>
-                    <p class="product-short-des">Mahalo MA1WL Owl Art Series Soprano...</p>
-                    <span class="price">&#8377 2,341</span><span class="actual-price">&#8377 2,464</span>
-                </div>
-            </div>
+    <h1 class="shop">Our Products</h1>
 
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">5% off</span>
-                    <img src="image/guitars/uk1.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">mahalo</h2>
-                    <p class="product-short-des">Mahalo MA1TK Soprano Tiki Ukulele</p>
-                    <span class="price">&#8377 2,341</span><span class="actual-price">&#8377 2,464</span>
-                </div>
+    <section class="product-container">
+        <div class="product-card">
+            <div class="product-image">
+                <img src="image/guitars/guitar.jpg" class="product-thumb" alt="">
+                <button class="card-btn">add to whislist</button>
             </div>
+            <div class="product-info">
+                <h2 class="product-brand">revolt</h2>
+                <p class="product-short-des">Revolt 39c Acoustic Guitar - Blue</p>
+                <span class="price">&#8377 5,450</span>
+            </div>
+        </div>
 
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">5% off</span>
-                    <img src="image/guitars/uk2.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">mahalo</h2>
-                    <p class="product-short-des">Mahalo Ukuleles ML2CP Island Concert Ukulele with Gigbag-Coral Pink
-                        ml-2-cp</p>
-                    <span class="price">&#8377 2,600</span><span class="actual-price">&#8377 2,736</span>
-                </div>
+        <div class="product-card">
+            <div class="product-image">
+                <img src="image/guitars/guitar1.jpg" class="product-thumb" alt="">
+                <button class="card-btn">add to whislist</button>
             </div>
+            <div class="product-info">
+                <h2 class="product-brand">revolt</h2>
+                <p class="product-short-des">Revolt 39c Acoustic Guitar - Blue</p>
+                <span class="price">&#8377 5,450</span>
+            </div>
+        </div>
 
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">5% off</span>
-                    <img src="image/guitars/uk3.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">mahalo</h2>
-                    <p class="product-short-des">Mahalo Ukuleles ML2BC Island Concert Ukulele with Gigbag-Berry Crush
-                        ml-2-bc</p>
-                    <span class="price">&#8377 2,600</span><span class="actual-price">&#8377 2,736</span>
-                </div>
+        <div class="product-card">
+            <div class="product-image">
+                <img src="image/guitars/guitar2.jpg" class="product-thumb" alt="">
+                <button class="card-btn">add to whislist</button>
             </div>
+            <div class="product-info">
+                <h2 class="product-brand">revolt</h2>
+                <p class="product-short-des">Revolt 39c Acoustic Guitar - Blue</p>
+                <span class="price">&#8377 5,450</span>
+            </div>
+        </div>
 
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">5% off</span>
-                    <img src="image/guitars/uk4.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">pluto</h2>
-                    <p class="product-short-des">Pluto HW34-101 34 Inch Baby Acoustic Guitar</p>
-                    <span class="price">&#8377 4,596</span><span class="actual-price">&#8377 4,848</span>
-                </div>
+        <div class="product-card">
+            <div class="product-image">
+                <img src="image/guitars/guitar3.jpg" class="product-thumb" alt="">
+                <button class="card-btn">add to whislist</button>
             </div>
+            <div class="product-info">
+                <h2 class="product-brand">revolt</h2>
+                <p class="product-short-des">Revolt 39c Acoustic Guitar - Red</p>
+                <span class="price">&#8377 5,450</span>
+            </div>
+        </div>
 
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="image/drums/card.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Pearl</h2>
-                    <p class="product-short-des">Pearl Roadshow 5 Pcs Acoustic Drum Set</p>
-                    <span class="price">&#8377 54,079</span><span class="actual-price">&#8377 56,925</span>
-                </div>
+        <div class="product-card">
+            <div class="product-image">
+                <img src="image/guitars/guitar4.jpg" class="product-thumb" alt="">
+                <button class="card-btn">add to whislist</button>
             </div>
-
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="image/drums/card1.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Pearl</h2>
-                    <p class="product-short-des">Pearl Roadshow 5 Pcs Acoustic Drum Set</p>
-                    <span class="price">&#8377 54,079</span><span class="actual-price">&#8377 56,925</span>
-                </div>
+            <div class="product-info">
+                <h2 class="product-brand">magna</h2>
+                <p class="product-short-des">Magna ST20R - Stratway Electric Guitar SKU: ST20R</p>
+                <span class="price">&#8377 8,900</span><span class="actual-price">&#8377 10,400</span>
             </div>
-
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="image/drums/card2.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Pearl</h2>
-                    <p class="product-short-des">Pearl Roadshow 5 Pcs Acoustic Drum Set</p>
-                    <span class="price">&#8377 54,079</span><span class="actual-price">&#8377 56,925</span>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="image/drums/card3.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Pearl</h2>
-                    <p class="product-short-des">Pearl Roadshow 5 Pcs Acoustic Drum Set</p>
-                    <span class="price">&#8377 54,079</span><span class="actual-price">&#8377 56,925</span>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="image/drums/card4.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Pearl</h2>
-                    <p class="product-short-des">Pearl Roadshow 5 Pcs Acoustic Drum Set</p>
-                    <span class="price">&#8377 54,079</span><span class="actual-price">&#8377 56,925</span>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="image/drums/card5.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Pearl</h2>
-                    <p class="product-short-des">Pearl Roadshow 5 Pcs Acoustic Drum Set</p>
-                    <span class="price">&#8377 54,079</span><span class="actual-price">&#8377 56,925</span>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="image/drums/card6.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Mapex</h2>
-                    <p class="product-short-des">Mapex Mars MA529SFIW Rock Shell Pack Driftwood</p>
-                    <span class="price">&#8377 63,603</span><span class="actual-price">&#8377 66,950</span>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="image/guitars/card7.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">pluto</h2>
-                    <p class="product-short-des">Pluto 41 inch Lefty Acoustic Guitar HW41CL</p>
-                    <span class="price">&#8377 54,079</span><span class="actual-price">&#8377 56,925</span>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="image/guitars/card8.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">pluto</h2>
-                    <p class="product-short-des">Pluto 41 inch Lefty Acoustic Guitar HW41CL</p>
-                    <span class="price">&#8377 4,596</span><span class="actual-price">&#8377 4,848</span>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="image/guitars/card9.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">pluto</h2>
-                    <p class="product-short-des">Pluto 41 inch Lefty Acoustic Guitar HW41CL</p>
-                    <span class="price">&#8377 4,596</span><span class="actual-price">&#8377 4,848</span>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="image/guitars/card10.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Pluto</h2>
-                    <p class="product-short-des">Pluto 41 inch Lefty Acoustic Guitar HW41C</p>
-                    <span class="price">&#8377 4,596</span><span class="actual-price">&#8377 4,848</span>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="image/guitars/card11.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Havana</h2>
-                    <p class="product-short-des">Havana AAG39 Acoustic Guitar with bag - Natural</p>
-                    <span class="price">&#8377 6,574</span><span class="actual-price">&#8377 6,919</span>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="image/guitars/card12.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Mantic</h2>
-                    <p class="product-short-des">Mantic GT1GC Acoustic Guitar- Natural</p>
-                    <span class="price">&#8377 7,600</span><span class="actual-price">&#8377 9,500</span>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="image/guitars/card13.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Cort Core-OC</h2>
-                    <p class="product-short-des">Cort Core-OC Electro Acoustic Guitar - Mahogany</p>
-                    <span class="price">&#8377 33,744</span><span class="actual-price">&#8377 35,520</span>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="image/guitars/card14.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">KEPMA</h2>
-                    <p class="product-short-des">KEPMA ES36 Acoustic Guitar - Black Matt</p>
-                    <span class="price">&#8377 15,900</span>
-                </div>
-            </div>
+        </div>
     </section>
+
 
     <footer></footer>
 
     <script src="js/footer.js"></script>
     <script src="js/nav.js"></script>
 </body>
+
 </html>
